Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   dist/filename0b7887dcfacbb8e25c9c.js
	deleted:    dist/filenamed2127acd57b7aa261cd6.js
	modified:   dist/index.html
	modified:   dist/sertif-1.png
	modified:   dist/sertif-2.png
	modified:   dist/stage-icon 1.png
	modified:   dist/stage-icon 2.png
	modified:   dist/stage-icon 3.png
	modified:   dist/stage-icon 4.png
	modified:   dist/work_example_icon.png
	modified:   node_modules/.cache/gh-pages/https!github.com!omikamiq!omikamiq.github.io.git
	modified:   src/assets/sertif-1.png
	modified:   src/assets/sertif-2.png
	modified:   src/assets/stage-icon 1.png
	modified:   src/assets/stage-icon 2.png
	modified:   src/assets/stage-icon 3.png
	modified:   src/assets/stage-icon 4.png
	modified:   src/assets/work_example_icon.png
	modified:   src/js/hello.js
	modified:   src/sass/footer.scss
	modified:   src/sass/popup-form.scss
	modified:   src/sass/sertificates.scss
	modified:   src/sass/stages.scss

--- a/src/sass/sertificates.scss
+++ b/src/sass/sertificates.scss
@@ -16,8 +16,8 @@
   }
   @media (min-width: 1439px) {
     flex-direction: row;
+    justify-content: space-around;
     width: calc(100vw - 300px);
-    gap: 100px;
     height: 450px;
   }
 }
@@ -59,6 +59,8 @@
 }
 
 .sertif-1 {
+  width: 280px;
+  height: 395px;
   @media (min-width: 767px) {
     width: 429px;
     height: 607px;
@@ -116,6 +118,13 @@
 }
 
 .sertif-1-desktop {
+  @media (min-width: 1439px) {
+    width: 231px;
+    height: 327px;
+  }
+}
+
+.sertif-2-desktop {
   @media (min-width: 1439px) {
     width: 231px;
     height: 327px;
