--- a/src/sass/stages.scss
+++ b/src/sass/stages.scss
@@ -117,15 +117,11 @@
 
 .stage-icon {
   margin: 20px 20px 25px 20px;
+  width: 300px;
   @media (min-width: 767px) {
     width: calc(100% - 100px);
+    height: calc(100% - 100px);
     margin: 30px 50px 40px 50px;
-  }
-}
-
-.stage-icon-desktop {
-  @media (min-width: 1439px) {
-    height: 300px;
   }
 }
 
